--- a/VallaHackathon/app/src/main/AndroidManifest.xml
+++ b/VallaHackathon/app/src/main/AndroidManifest.xml
@@ -2,11 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.obturecode.vallahackathon" >
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name=".MyApplication">
         <activity
             android:name="com.obturecode.vallahackathon.view.ListActivity"
             android:label="@string/app_name" >
@@ -15,6 +18,10 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.obturecode.vallahackathon.view.DetailActivity"
+            android:label="@string/app_name" >
         </activity>
     </application>
 
